[package]
name = "demo-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
lbf-prelude = { path = ".extras/lbf-prelude-0.1.0" }
lbf-demo-config-api = { path = ".extras/lbf-demo-config-api-0.1.0" }
lbf-demo-plutus-api = { path = ".extras/lbf-demo-plutus-api-0.1.0" }
plutus-ledger-api = { version = "3.0.2", features = ["lbf", "chrono"] }
num-bigint = { version = "0.4.6", features = ["serde"] }
num-integer = "0.1.46"
linked-hash-map = "0.5.6"
lbr-prelude = { version = "0.1.3", features = ["derive"] }
serde_json = { version = "1.0.139", features = ["raw_value"] }
serde = "1.0.218"
derive_builder = "0.12.0"
jsonrpsee-core = "0.21.0"
jsonrpsee-http-client = "0.21.0"
tokio-test = "0.4.4"
tower = { version = "0.4.13", features = ["util"] }
tx-bakery = { version = "2.0.0-beta.5", features = ["clap"] }
tx-bakery-ogmios = { version = "2.0.0-beta.5", features = ["clap"] }
reqwest = { version = "0.11.27", features = ["json"] }
uuid = { version = "1.15.0", features = ["v4"] }
cbor_event = "2.4.0"
tokio = { version = "1.43.0", features = [
  "time",
  "process",
  "rt",
  "rt-multi-thread",
] }
url = "2.5.4"
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive"] }

[dev-dependencies]
data-encoding = "2.8.0"
serial_test = "3.2.0"
